Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64577

QMessagebox not responding IOS 11

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.9.2
    • QPA
    • None
    • Qt 5.9.2

      iOS 11

      QWidget based application.
    • iOS/tvOS/watchOS

    Description

      QMessageBox does not close (i.e. it is like if the buttons are inactive) when running on iOS 11.3. The same application running on iOS 9 or 10 works normally. The problem occurs with the static methods or with the creation of a QMessageBox followed by exec().

      QMessageBox::StandardButton reply = MSGBOX_CLASS::information (this, "test", "test", QMessageBox::Ok | QMessageBox::Cancel); 

      I found a workaround:

      All these QMessageBox are always triggered through QActions, either from a QToolBar or a QMenuBar or a QMenu. If I connect these actions to their slots using Qt::QueuedConnection the problem is solved. The QActions and their slots are in the same thread.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            matirai Philippe
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes